# eys3d_opencv_wrapper

./: .gitignore  CMakeLists.txt  ModeConfig.db  README.md  build.bat  readme.txt  run_eys3d_opencv.bat  run_eys3d_opencv.sh  set_env.sh
cfg/: libeYs3D.log.config  libeYs3D_win.log.config
eSPDI/: eSPDI_def.h
eSPDI_win64/include/: asprintf.h  eSPDI_Common.h  eSPDI_DM.h
libeYs3D/include/: APC.def  APC_unity.def  EtronDI.def  EtronDI_unity.def  UnityBinder.h  debug.h  utils.h
libeYs3D/include/base/synchronization/: ConditionVariable.h  Lock.h
libeYs3D/include/devices/: CameraDevice.h  CameraDevice_8059.h  Pipeline.h
libeYs3D/include/devices/model/: RegisterReadWriteOptions.h
libeYs3D/include/video/: DepthFrameProducer.h  Frame.h  FrameProducer.h  PCFrame.h
libeYs3D/lib/: eys3d.exp  eys3d.lib
libeYs3D/magic/: magic.h
libeYs3D_linux/include/: APC.def  APC_unity.def  EYS3DSystem.h  EtronDI.def  EtronDI_unity.def  utils.h
libeYs3D_linux/include/base/synchronization/: MessageChannel.h
libeYs3D_linux/include/devices/: CameraDevice.h  Pipeline.h
libeYs3D_linux/include/devices/controller/: RegisterReadWriteController.h
libeYs3D_linux/include/video/: coders.h  video.h
libeYs3D_linux/lib/: libeys3d.so.a72d1d1  libeys3d.so.dc79415
libeYs3D_linux/magic/: magic.h
opencv_libs/opencv-3.4.2_vc/include/opencv2/: cvconfig.h
opencv_libs/opencv-3.4.2_vc/lib/: opencv_world342.lib
opencv_libs/opencv-3.4.2_vc/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules-release.cmake
src/: main_win.cpp
src/linux/: exampleBinder.cpp  exampleBinder.h  main.cpp
